// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.expand controlled by expandedRowKeys 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="0-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand controlled by expandedRowKeys 2`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="0-extra-row"
            style="display: none;"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="1-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand expand all rows by default 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="0-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="1-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand expand row by click 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="0-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left: 0px;"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand expand rows by defaultExpandedRowKeys 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
            data-row-key="1-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand icon as cell 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-expand-icon-th"
              rowspan="1"
              title=""
            />
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class="rc-table-row-expand-icon-cell"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class=""
            >
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class="rc-table-row-expand-icon-cell"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
            </td>
            <td
              class=""
            >
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand icon to the specify column 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              Lucy
            </td>
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              Jack
            </td>
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand row correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expend row class correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row expand-row-test-class-name rc-table-expanded-row-level-1"
            data-row-key="0-extra-row"
          >
            <td
              class=""
              colspan="2"
            >
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders fixed column correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-scroll"
    >
      <div
        class="rc-table-body"
      >
        <table
          class=""
        >
          <colgroup>
            <col />
            <col />
            <col />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-fixed-columns-in-body"
              >
                Name
              </th>
              <th
                class=""
              >
                Age
              </th>
              <th
                class="rc-table-fixed-columns-in-body"
              >
                Gender
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="0"
            >
              <td
                class="rc-table-fixed-columns-in-body"
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                <span
                  class="rc-table-row-expand-icon rc-table-row-collapsed"
                />
                Lucy
              </td>
              <td
                class=""
              >
                27
              </td>
              <td
                class="rc-table-fixed-columns-in-body"
              >
                F
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="1"
            >
              <td
                class="rc-table-fixed-columns-in-body"
              >
                <span
                  class="rc-table-row-indent indent-level-0"
                  style="padding-left:0px"
                />
                <span
                  class="rc-table-row-expand-icon rc-table-row-collapsed"
                />
                Jack
              </td>
              <td
                class=""
              >
                28
              </td>
              <td
                class="rc-table-fixed-columns-in-body"
              >
                M
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="rc-table-fixed-left"
    >
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
        >
          <table
            class="rc-table-fixed"
          >
            <colgroup>
              <col />
            </colgroup>
            <thead
              class="rc-table-thead"
            >
              <tr>
                <th
                  class=""
                >
                  Name
                </th>
              </tr>
            </thead>
            <tbody
              class="rc-table-tbody"
            >
              <tr
                class="rc-table-row rc-table-row-level-0"
                data-row-key="0"
              >
                <td
                  class=""
                >
                  <span
                    class="rc-table-row-indent indent-level-0"
                    style="padding-left:0px"
                  />
                  <span
                    class="rc-table-row-expand-icon rc-table-row-collapsed"
                  />
                  Lucy
                </td>
              </tr>
              <tr
                class="rc-table-row rc-table-row-level-0"
                data-row-key="1"
              >
                <td
                  class=""
                >
                  <span
                    class="rc-table-row-indent indent-level-0"
                    style="padding-left:0px"
                  />
                  <span
                    class="rc-table-row-expand-icon rc-table-row-collapsed"
                  />
                  Jack
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="rc-table-fixed-right"
    >
      <div
        class="rc-table-body-outer"
        style="-webkit-transform:translate3d (0, 0, 0)"
      >
        <div
          class="rc-table-body-inner"
        >
          <table
            class="rc-table-fixed"
          >
            <colgroup>
              <col />
            </colgroup>
            <thead
              class="rc-table-thead"
            >
              <tr>
                <th
                  class=""
                >
                  Gender
                </th>
              </tr>
            </thead>
            <tbody
              class="rc-table-tbody"
            >
              <tr
                class="rc-table-row rc-table-row-level-0"
                data-row-key="0"
              >
                <td
                  class=""
                >
                  F
                </td>
              </tr>
              <tr
                class="rc-table-row rc-table-row-level-0"
                data-row-key="1"
              >
                <td
                  class=""
                >
                  M
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders nested data correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders tree row correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left"
>
  <div
    class="rc-table-content"
  >
    <div
      class="rc-table-body"
    >
      <table
        class=""
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class=""
            >
              Name
            </th>
            <th
              class=""
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class=""
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="1"
          >
            <td
              class=""
            >
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class=""
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
